# TapToGo

./: README.md
Overview/: TapToGo_Overview.txt
model/: Overview.txt  model.py  result.txt  testing.py
taptogo complite project/: README.md  constants.py  db.py  fare_logic.py  main.py  model_function.py  out.txt  pyproject.toml  requirements.txt  taptogo.db  test.py  test_error.py  test_status.py  test_status2.py  test_status3.py  ui.py
taptogo complite project/android/: AndroidManifest_nfc_additions.xml  MainActivity.kt  README.md
taptogo complite project/components/: active_trip_card.py  bus_card.py  stop_chip.py  wallet_chip.py
taptogo complite project/screens/: bus_detail.py  home.py  live_chat.py  login.py  login_animation.py  on_board.py  payment.py  profile.py  register.py  route_screen.py  tap.py
taptogo complite project/screens/admin/: add_bus.py  admin_home.py  fare_config.py  view_buses.py
taptogo complite project/screens/camera/: camera_portal.py
taptogo complite project/screens/conductor/: conductor_dashboard.py
taptogo complite project/utils/: eta_simulator.py  map_html.py
